added code-coverage-aggregator module